--- a/control
+++ b/control
@@ -1,12 +1,12 @@
 Package: h.ryan.youtubereborn
 Name: YouTube Reborn
-Version: 3.0.1-b1
+Version: 3.0.1-b2
 Architecture: iphoneos-arm
 Description: YouTube Customizer
 Maintainer: Lillie
 Author: Lillie
 Section: Tweaks
-Depends: mobilesubstrate (>= 0.9.5000), firmware (>= 14.0), weeb.lillie.ffmpegkitfull, weeb.lillie.mobilevlckit
+Depends: mobilesubstrate (>= 0.9.5000), firmware (>= 14.0), weeb.lillie.mobilevlckit
 Conflicts: net.sarahh12099.youtubereborn, com.twickd.sarahh12099.youtube-reborn, com.yourepo.jpet26.youtubetools1, com.justinpetkovic.youtubetools, com.johnzaro.perfectyoutube, com.ichitaso.youtubepatcher, com.yourepo.ikghd.youtubekiller, com.yourepo.ikghd.youtubekillers, com.sinfool.youtopia, com.google.ios.ytadblock, prasa.youtubeplus, com.unlimapps.ytpp, com.twickd.laki.raspberry, com.laki.raspberry, com.twickd.lazar.raspberry, 0xcc.woodfairy.noytads, weeb.lillie.enhancerforyoutubepremium, weeb.lillie.youtubepremiumplus, com.miro.uyou, com.ps.uyoucompat, com.ps.ytsystemappearance
 Replaces: net.sarahh12099.youtubereborn, com.twickd.sarahh12099.youtube-reborn
 Provides: net.sarahh12099.youtubereborn, com.twickd.sarahh12099.youtube-reborn
