--- a/control
+++ b/control
@@ -6,9 +6,9 @@ Description: YouTube Customizer
 Maintainer: Lillie
 Author: Lillie
 Section: Tweaks
-Depends: mobilesubstrate (>= 0.9.5000), firmware (>= 13.0)
+Depends: mobilesubstrate (>= 0.9.5000), firmware (>= 13.0), weeb.lillie.ffmpegkitfull, weeb.lillie.mobilevlckit
 Conflicts: net.sarahh12099.youtubereborn, com.twickd.sarahh12099.youtube-reborn, com.yourepo.jpet26.youtubetools1, com.justinpetkovic.youtubetools, com.johnzaro.perfectyoutube, com.ichitaso.youtubepatcher, com.yourepo.ikghd.youtubekiller, com.yourepo.ikghd.youtubekillers, com.sinfool.youtopia, com.google.ios.ytadblock, prasa.youtubeplus, com.unlimapps.ytpp, com.twickd.laki.raspberry, com.laki.raspberry, com.twickd.lazar.raspberry, 0xcc.woodfairy.noytads, weeb.lillie.enhancerforyoutubepremium, weeb.lillie.youtubepremiumplus, com.miro.uyou, com.ps.uyoucompat, com.ps.ytsystemappearance, com.galacticdev.isponsorblock
 Replaces: net.sarahh12099.youtubereborn, com.twickd.sarahh12099.youtube-reborn
 Provides: net.sarahh12099.youtubereborn, com.twickd.sarahh12099.youtube-reborn
-Depiction: https://repo.lillieweeb001.xyz/depictions/youtubereborn.html
-SileoDepiction: https://repo.lillieweeb001.xyz/sileodepictions/h.ryan.youtubereborn/depiction.json
+Depiction: https://repo.lillieh.gay/depictions/youtubereborn.html
+SileoDepiction: https://repo.lillieh.gay/sileodepictions/h.ryan.youtubereborn/depiction.json
