--- a/Chromium/manifest.json
+++ b/Chromium/manifest.json
@@ -5,12 +5,7 @@
     "manifest_version": 3,
     "permissions": ["storage"],
     "action": {
-        "default_icon": {
-            "16": "youtubereborn.png",
-            "32": "youtubereborn.png",
-            "48": "youtubereborn.png",
-            "128": "youtubereborn.png"
-        }
+        "default_icon": "youtubereborn.png"
     },
     "options_page": "options.html",
     "content_scripts": [{
